# Capstone-Project_Linux-App

./: .gitignore  CMakeLists.txt  IVI-System-Linux-App  LinuxToWindow.json  README.md  WindowToLinux.json  commandShell.txt  install.sh  main.cpp  setup_linux_env_for_linux_app.sh  testing.cpp  testing.h
Datasheet/: WhileList.txt  WindowToLinux-StressTest.json  WindowToLinux.json
DeviceStats/ProcessesStats/: processesstats.cpp  processesstats.h  processstats.cpp  processstats.h
DeviceStats/SystemStats/: cpucore.cpp  cpucore.h  cpugeneral.cpp  cpugeneral.h  systemcpu.cpp  systemcpu.h  systemdiskio.cpp  systemdiskio.h  systemmem.cpp  systemmem.h  systemnetworkio.cpp  systemnetworkio.h  systemstats.cpp  systemstats.h
OverloadSolution/: devicespeaker.cpp  devicespeaker.h  stresstestsystem.cpp  stresstestsystem.h  terminateprocesses.cpp  terminateprocesses.h
OverloadingAlgorithm/: OverloadingDetector.cpp  OverloadingDetector.h  OverloadingHandler.cpp  OverloadingHandler.h
Report/: Repot Capstone Project M1 (offical).docx
TCPService/: receiverworker.cpp  receiverworker.h  senderworker.cpp  senderworker.h  tcpservice.cpp  tcpservice.h
install/: draft.txt  install.sh  softbeep
utils/: commands.cpp  commands.h  hostIPAddress.h  installlinuxapi.cpp  installlinuxapi.h  processcommand.cpp  processcommand.h
